mapa coordenada y mensaje

--- a/mapjs/templates/mapjs/home.html
+++ b/mapjs/templates/mapjs/home.html
@@ -11,14 +11,10 @@
     crossorigin=""/>
 </head>
 <body>
-    <h1>El pepe</h1>
-<!--     <div id="myMap" style="height: 200px;"></div>
-    <p>el pepe</p>
-    <div id="map" style="height: 200px;"></div>
-    <p>el pepe</p>
-    <div id="myMap1" style="height: 200px;"></div> -->
     <div id="mapa" style="height: 500px;"></div>
-    
+
+    <div id="mapid" style="width: 600px; height: 400px;"></div>
+
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
