--- a/mapjs/templates/mapjs/home.html
+++ b/mapjs/templates/mapjs/home.html
@@ -11,9 +11,7 @@
     crossorigin=""/>
 </head>
 <body>
-    <div id="mapa" style="height: 500px;"></div>
-
-    <div id="mapid" style="width: 600px; height: 400px;"></div>
+    <div id="mapa" style="height: 500px; width: 500px;"></div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
